--- a/roles/k8s/tasks/main.yml
+++ b/roles/k8s/tasks/main.yml
@@ -218,7 +218,7 @@
       become_flags: '-E -S -n'
 
     - name: Install traefik
-      shell: helm install traefik traefik/traefik --namespace=kube-system --set externalIP={{ansible_default_ipv4.address}}
+      shell: helm install traefik traefik/traefik --namespace=kube-system --set service.externalIPs='{{'{'}}{{ansible_default_ipv4.address}}{{'}'}}'
       # helm template $$TMP/traefik -n traefik --namespace kube-system --name traefik0 --tiller-namespace kube-system --set externalIP={{ansible_default_ipv4.address}} | kubectl apply -n kube-system  -f -;
       # shell: helm install --values=roles/k8s/values/traefik.yml traefik traefik/traefik | kubectl apply -n kube-system  -f -;
       become: true
