--- a/roles/k8s/tasks/main.yml
+++ b/roles/k8s/tasks/main.yml
@@ -222,10 +222,15 @@
       shell:
         helm install traefik0 traefik/traefik \
           --namespace=kube-system \
-          --set externalIPs='{{'{'}}{{ansible_default_ipv4.address}}{{'}'}}'
+          --set service.externalIPs='{{'{'}}{{ansible_default_ipv4.address}}{{'}'}}'
       # helm template $$TMP/traefik -n traefik --namespace kube-system --name traefik0 --tiller-namespace kube-system --set externalIP={{ansible_default_ipv4.address}} | kubectl apply -n kube-system -f -;
       # shell: helm install --values=roles/k8s/values/traefik.yml traefik traefik/traefik | kubectl apply -n kube-system -f -;
       become: true
       become_method: sudo
       become_flags: '-E -S -n'
       when: "not minikube_use_nginx"
+      register: result
+
+    - debug:
+      var: result
+      verbosity: 1
