--- a/roles/k8s/tasks/main.yml
+++ b/roles/k8s/tasks/main.yml
@@ -211,7 +211,7 @@
 
     - name: Add Traefik helm repo
       shell: |
-        helm repo add traefik {{traefik_url}}
+        helm repo add stable {{helm_stable_repo_url}}
         helm repo update;
       become: true
       become_method: sudo
@@ -219,15 +219,8 @@
 
     - name: Install traefik
       shell:
-        helm install traefik0 traefik/traefik --namespace=kube-system --set service.externalIPs='{{'{'}}{{ansible_default_ipv4.address}}{{'}'}}'
-      # helm template $$TMP/traefik -n traefik --namespace kube-system --name traefik0 --tiller-namespace kube-system --set externalIP={{ansible_default_ipv4.address}} | kubectl apply -n kube-system -f -;
-      # shell: helm install --values=roles/k8s/values/traefik.yml traefik traefik/traefik | kubectl apply -n kube-system -f -;
+        helm install traefik0 stable/traefik --namespace=kube-system --set externalIP={{ansible_default_ipv4.address}}
       become: true
       become_method: sudo
       become_flags: '-E -S -n'
       when: "not minikube_use_nginx"
-      register: result
-
-    - debug:
-      var: result
-      verbosity: 1
