Fixed permissions for Helm repo & cache

--- a/roles/helm/tasks/main.yml
+++ b/roles/helm/tasks/main.yml
@@ -60,3 +60,21 @@
         state: absent
       become: yes
   when: helm_installed.stat.exists == false
+
+- name: Add stable helm repo
+  shell: |
+    helm repo add stable {{helm_stable_repo_url}}
+    helm repo update;
+  become: true
+  become_method: sudo
+  become_flags: '-E -S -n'
+
+- name: Fix permissions for helm repo directory
+  file:
+    path: '{{localhome}}/.config'
+    mode: "0755"
+    owner: '{{localuser}}'
+    group: '{{localuser}}' 
+  become: true
+  become_method: sudo
+  become_flags: '-E -S -n'
