Added a Helm removal step to reset_k8s

--- a/roles/helm/tasks/remove.yml
+++ b/roles/helm/tasks/remove.yml
@@ -28,4 +28,11 @@
         path: '{{ user_home }}/.config/{{ helm_name }}'
         state: absent
       become: yes
+
+    - name: Remove Helm Repository Cache
+      file:
+        path:  '{{ user_home }}/.cache'
+        state: absent
+      become: yes
+      
   when: helm_installed.stat.exists == true
