--- a/roles/prometheus/vars/main.yml
+++ b/roles/prometheus/vars/main.yml
@@ -14,8 +14,26 @@ elasticsearch_instance_add_cluster_label:
 prometheus_alertmanager_config_dir: /etc/alertmanager
 prometheus_alertmanager_data_dir: /alertmanager
 
-grafana_provisioning_config_dir: /etc/grafana/provisioning/datasources
+grafana_provisioning_config_dir: /etc/grafana/provisioning
 grafana_data: /var/lib/grafana
+grafana_dashboard_version: nautilus
+grafana_datasource: Prometheus
+grafana_dashboards_path: "{{ grafana_provisioning_config_dir }}/dashboards"
+grafana_dashboard_files:
+  - ceph-cluster.json
+  - cephfs-overview.json
+  - host-details.json
+  - hosts-overview.json
+  - osd-device-details.json
+  - osds-overview.json
+  - pool-detail.json
+  - pool-overview.json
+  - radosgw-detail.json
+  - radosgw-overview.json
+  - rbd-overview.json
+grafana_plugins:
+  - vonage-status-panel
+  - grafana-piechart-panel
 
 slack_api_url: "https://hooks.slack.com/services/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"
 
