[ST-322] cron job

--- a/roles/prometheus/tasks/server.yml
+++ b/roles/prometheus/tasks/server.yml
@@ -54,7 +54,13 @@
 - name: Add cron job
   lineinfile:
     path: /etc/crontab
-    line: 0 4     * * *   root    python3 /usr/local/bin/prom_helper.py -g && mv *.json /etc/prometheus/
+    line: 30 *     * * *   root    python3 /usr/local/bin/prom_helper.py -g && mv *.json /etc/prometheus/
+  become: yes
+
+- name: Add cron job for the playbook
+  lineinfile:
+    path: /etc/crontab
+    line: 0 4     * * *   root    ansible-playbook {{playbook_dir}}/deploy_prometheus.yml -i hosts --extra-vars "mode='server'" -e 'ansible_python_interpreter=/usr/bin/python3'
   become: yes
 
 - name: Generate Prometheus configuration
