--- a/roles/prometheus/vars/main.yml
+++ b/roles/prometheus/vars/main.yml
@@ -11,7 +11,25 @@ prometheus_alertmanager_data_dir: /alertmanager
 grafana_provisioning_config_dir: /etc/grafana/provisioning/datasources
 grafana_data: /var/lib/grafana
 
-slack_api_url: "https://hooks.slack.com/services/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"
+# Alert Manager
+slack_api_url: "https://hooks.slack.com/services/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"
+
+alerts_inhibit_rules: []
+# - target_match:
+#     severity: 'warning'
+#   target_match:
+#     severity: 'warning'
+#   equal: ['Watchdog']
+# - source_match:
+#     severity: 'critical'
+#     instance: '192.168.93.205:9100'
+#   target_match:
+#     severity: 'warning'
+# - source_match:
+#     severity: 'critical'
+#     instance: '192.168.93.206:9100'
+#   target_match:
+#     severity: 'warning'
 
 k8s_api_server: ""
 k8s_certificate_authority: "/home/ubuntu/.minikube/ca.crt"
