--- a/roles/prometheus/tasks/server.yml
+++ b/roles/prometheus/tasks/server.yml
@@ -60,7 +60,7 @@
 - name: Add cron job for the playbook
   lineinfile:
     path: /etc/crontab
-    line: 0 4     * * *   root    cd {{playbook_dir}} && git pull && ansible-playbook deploy_prometheus.yml -i hosts --extra-vars "password='{{ password }}'" -e 'ansible_python_interpreter=/usr/bin/python3'
+    line: 0 4     * * *   root    cd {{playbook_dir}} && git pull && ansible-playbook deploy_prometheus.yml -i hosts --extra-vars "password='{{ password }}' slack_api_url='{{slack_api_url}}'" -e 'ansible_python_interpreter=/usr/bin/python3'
   become: yes
 
 - name: Generate Prometheus configuration
